Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Yosemite Sam Contact Card</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
-    <!-- 
-    You must have: 
-    - a profile picture image
-    - Name
-    - Title
-    - Phone Number
-    - Company/Organization Name
-
-    -->
-    
-
-
+    <div class="contact-card">
+        <img src="images/Yosemite Sam.jpg" alt="Yosemite Sam" class="profile-img">
+        <div class="contact-details">
+            <h1 class="name">Yosemite Sam</h1>
+            <p class="title">Chief Varmit Wrangler / Gold Prospector</p>
+            <p class="phone">📞 1(800)-Get GOLD</p>
+            <p class="company">Wild West Shenanigans INC</p>
+        </div>
+    </div>
 </body>
 </html>
